force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <description>Records an actual payment made by a tenant against an Invoice. Submitted for landlord approval. One or more Payments can exist per Invoice to support partial or split payments.</description>
    <label>Payment</label>
    <nameField>
        <displayFormat>PAY-{0000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>