force-app/main/default/objects/Payment__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Tenant notes about this payment. Used to describe the payment method or provide context for the landlord during approval. Attach a screenshot via Salesforce Files.</description>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>