force-app/main/default/objects/Payment__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>Date the payment was made by the tenant (e.g. bank transfer date).</description>
    <label>Payment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>