force-app/main/default/objects/Payment__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>Method of Payment done to complete the payment</description>
    <label>Payment Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Methods</valueSetName>
    </valueSet>
</CustomField>