force-app/main/default/objects/Payment__c/fields/Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference__c</fullName>
    <description>Bank transaction ID, PayID reference, or receipt number for this payment.</description>
    <label>Payment Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>