force-app/main/default/objects/Payment__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Payment</fullName>
                <default>true</default>
                <label>Invoice Payment</label>
            </value>
            <value>
                <fullName>Credit Payment</fullName>
            </value>
            <value>
                <fullName>Rent Payment</fullName>
            </value>
            <value>
                <fullName>Credit Applied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>