force-app/main/default/objects/Payment__c/fields/Tenancy__c.field-meta.xml
<CustomField>
    <fullName>Tenancy__c</fullName>
    <label>Tenancy</label>
    <referenceTo>Tenancy__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>