force-app/main/default/objects/Payment__c/validationRules/Cannot_Revert_From_Received.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Revert_From_Received</fullName>
    <active>true</active>
    <description>Once a payment is Received (landlord-approved), its status cannot be changed.</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISPICKVAL(PRIORVALUE(Status__c), "Received"),
    NOT(ISPICKVAL(Status__c, "Received"))
)</errorConditionFormula>
    <errorMessage>A payment that has been Received cannot be changed to another status.</errorMessage>
</ValidationRule>