force-app/main/default/objects/Payment__c/validationRules/Cannot_Submit_Against_Paid_Invoice.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Submit_Against_Paid_Invoice</fullName>
    <active>true</active>
    <description>Prevents a tenant from submitting a payment against an invoice that is already fully paid.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Invoice__c)),
    ISPICKVAL(Status__c, "Paid"),
    ISPICKVAL(Invoice__r.Status__c, "Paid")
)</errorConditionFormula>
    <errorMessage>This invoice has already been paid in full. No further payments can be submitted against it.</errorMessage>
</ValidationRule>